<resources>
    <string name="app_name">Navigation Example</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_more_fragment">Hello more fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>
    <string name="hello_forth_fragment">Hello forth fragment</string>
    <string name="home">Home</string>
    <string name="list">List</string>
    <string name="more">More</string>
    <string name="start">Start</string>
    <string name="second">Second</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="end">End</string>
    <string name="home_imageview">Home ImageView</string>
    <string name="next">Next</string>
    <string name="imageview_one">ImageView One</string>
    <string name="imageview_second">ImageView Second</string>
    <string name="hello_other_fragment">Hello other fragment</string>
    <string name="hello_another_fragment">Hello other 2 fragment</string>
</resources>
